updates and merged content from part 2

--- a/slides/21-running-nodeapps.html
+++ b/slides/21-running-nodeapps.html
@@ -1,5 +1,5 @@
 <!-- - - - - - - - - - - - - RUNNING NODE APPS - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-			<section>
+			<!-- <section>
 				<h2 style="margin-bottom:40px;">Let's run our app!</h2>
 				<p>To run your web server, open up your command line and run this command:</p>
 
@@ -31,6 +31,6 @@
 
 				<p>In command line, press <strong>Ctrl + C</strong> and then run <strong>node app.js</strong> again.</p>
 				<p>Every time you change your code, you have to restart the server. And don't forget to refresh your browser after every change too! </p>
-			</section>
+			</section> -->
 
 <!-- - - - - - - - - - - - - END of RUNNING NODE APPS - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
