--- a/slides/30-step2code.html
+++ b/slides/30-step2code.html
@@ -1,5 +1,5 @@
 <!-- - - - - - - - - - - - - - - STEP 2 CODE  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<section>
+<!-- <section>
 	<h2 class="big">Step 2: Send and receive data between client and server</h2>
 </section>
 
@@ -75,5 +75,5 @@ socket.on('test', function(data) {
 <section>
 	<p>You should see something like this:</p>
 	<img src="images/two-console-logs.png" class="noborder" style="max-width:100%;">
-</section>
+</section> -->
 <!-- - - - - - - - - - - - - - - - END of STEP 2 CODE - - - - - - - - - - - - - - - - - -  - - - - - - - - - - - - - - - - - - - - -->
