--- a/slides/35-websocket-overview.html
+++ b/slides/35-websocket-overview.html
@@ -1,9 +1,9 @@
 <!-- - - - - - - - - - - WEBSOCKET HIGH-LEVEL OVERVIEW - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<section>
+<!-- <section>
 	<h2 class="big" style="margin-bottom:60px;">Congratulations!<br> You now have a real-time web app!</h2>
 	<h2 class="subhead fragment fade-in" style="margin-bottom:40px;">"Uh, OK... That wasn't too exciting."</h2>
 	<h2 class="subhead fragment fade-in" style="font-size:1.3em;margin-bottom:30px;">"What's so special about this whole<br> WebSocket thing, anyway?"</h2>
-</section>
+</section> -->
 			<section>
 				<h2 class="subhead">Let's talk about protocols</h2>
 				<h2 style="font-size:2.5em;">HTTP vs WebSocket</h2>
