--- a/slides/40-challenge1.html
+++ b/slides/40-challenge1.html
@@ -1,5 +1,5 @@
 <!-- - - - - - - - - - - - - - - CHALLENGE 1 + SOLUTION - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<section>
+<!-- <section>
 	<h2 class="subhead">Enough talk.</h2>
 	<h2 class="big">Let's get back to the code!</h2>
 </section>
@@ -86,5 +86,5 @@ socket.on('test', function(data) {
 
 <section>
 	<h2 class="big">So what did we just do? How does that code work?</h2>
-</section>
+</section> -->
 <!-- - - - - - - - - - - - - - - - END of CHALLENGE 1 + SOLUTION - - - - - - - - - - - - - - - - - -  - - - - - - - - - - - - - - - - - - - - -->
