--- a/slides/51-event-listeners.html
+++ b/slides/51-event-listeners.html
@@ -64,10 +64,9 @@ document.addEventListener('click', <span class="highlighted-red">function(event)
 <section>
 	<h2 style="margin-bottom:40px">Let's test it out, shall we?</h2>
 	<ol class="listspaces" style="margin-bottom:15px;font-size:0.92em;">
-		<li><strong>Copy-paste the code below into local.js</strong> (after your existing code)</li>
-		<li><strong>Restart your app</strong> (Remember: Ctrl + C, "node app.js", refresh the browser)</li>
-		<li><strong>Click somewhere inside your blank web page</strong> (after refreshing the page!)</li>
-		<li><strong>And then check your browser console</strong></li>
+		<li>Copy-paste the code below into your browser's console while on a web page</li>
+		<li>Click somewhere on that web page</li>
+		<li>And then check your browser console</li>
 	</ol>
 	<pre style="font-size:1.1em;margin:0;width:100%;"><code class="js" data-trim contenteditable="">
 
