--- a/slides/52-socketio-listeners.html
+++ b/slides/52-socketio-listeners.html
@@ -1,6 +1,6 @@
 <!-- - - - - - - - - - - - - - - - - - - - - SOCKETIO LISTENERS - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <section>
-	<h2 class="big">Next up: Events in SocketIO</h2>
+	<h2 class="big">Events in SocketIO</h2>
 	<h3 class="subhead">You already know how to use them!</h3>
 </section>
 
