--- a/slides/53-first-socketio-functions.html
+++ b/slides/53-first-socketio-functions.html
@@ -1,5 +1,5 @@
 <!-- - - - - - - - - - - - - - - - OUR FIRST SOCKETIO FUNCTIONS  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<section>
+<!-- <section>
 	<h2 class="big" style="margin-bottom:60px;">Our SocketIO Functions So Far</h2>
 	<div class="halves">
 		<h3 style="font-size:1.7em;">Server:</h3>
@@ -15,7 +15,11 @@
 			<li class="fragment current-visible highlighted-blue" data-fragment-index="2"><strong>socket.emit</strong> - Send event to server</li>
 		</ul>
 	</div>
-</section>
+</section> -->
+
+
+
+
 <!--
 	***	QUESTION BEFORE SHOWING FRAGMENT: what are the other two SocketIO functions in you code?
 	- shout them out!
