--- a/slides/60-challenge2.html
+++ b/slides/60-challenge2.html
@@ -1,5 +1,5 @@
 <!-- - - - - - - - - - - - - - - - - CHALLENGE 2  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<section>
+<!-- <section>
 	<h2 style="font-size:1.6em;margin-bottom:50px;">Challenge 2: Combine user input events with SocketIO events</h2>
 	<p style="margin-bottom:50px;">Change your code so that when the user clicks the screen, you use console.log to display the event info object
 		 <em>and you also send it to the server.</em></p>
@@ -27,5 +27,5 @@ socket.on('test', function(data) {
 	console.log(data);
 });
 		</pre>
-</section>
+</section> -->
 <!-- - - - - - - - - - - - - - - - END of CHALLENGE 2 - - - - - - - - - - - - - - - - - -  - - - - - - - - - - - - - - - - - - - - -->
