--- a/slides/63-socketio-emitters.html
+++ b/slides/63-socketio-emitters.html
@@ -1,6 +1,6 @@
 <!-- - - - - - - - - - - - - - - - - - - - - SOCKETIO LISTENERS - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <section>
-	<h2 class="big">Next up: The SocketIO Event Emitter</h2>
+	<h2 class="big">The SocketIO Event Emitter</h2>
 	<h3 class="subhead">This is how we send (or <em>emit</em>) events</h3>
 </section>
 
