--- a/slides/77-last-pieces.html
+++ b/slides/77-last-pieces.html
@@ -1,6 +1,6 @@
 <!-- - - - - - - - - - - - - - - LAST PIECES - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <section>
-	<h2 class="big" style="margin-bottom:40px;">The last pieces of the puzzle:</h2>
+	<h2 class="big" style="margin-bottom:40px;">Pieces of the painting app puzzle:</h2>
 	<ol class="listspaces">
 		<li class="fragment highlight-current-blue">How to detect mouse movements (when users click and drag their mouse and when they let go)</li>
 		<li class="fragment highlight-current-blue">How to draw lines on the screen</li>
