--- a/slides/80-challenge4.html
+++ b/slides/80-challenge4.html
@@ -1,5 +1,5 @@
 <!-- - - - - - - - - - - - - - - - - - CHALLENGE 4  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<section>
+<!-- <section>
 	<h2 style="margin-bottom:25px;">Challenge 4: Group Googling for Mouse Events</h2>
 	<p class="subhead" style="font-size:0.8em;margin-bottom:70px;">Let's learn the way <em>real</em> programmers do it -- with Google!</p>
 	<p><strong>Choose one of the following missions:</strong></p>
@@ -47,6 +47,6 @@ document.addEventListener('click', function(event) {
 	socket.emit('test', <span class="fragment highlight-current-red" data-fragment-index="0">{x: <span class="fragment highlight-current-red" data-fragment-index="1">event.clientX</span>, y: <span class="fragment highlight-current-red" data-fragment-index="2">event.clientY</span>}</span>);
 });
 	</pre>
-</section>
+</section> -->
 
 <!-- - - - - - - - - - - - - - - - - END of  CHALLENGE 4 - - - - - - - - - - - - - - -  - - - - - - - - - - - - - - - - - - - - -->
