--- a/slides/50-events-overview.html
+++ b/slides/50-events-overview.html
@@ -1,6 +1,5 @@
 <!-- - - - - - - - - - - - - - - - -  EVENTS OVERVIEW  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <section>
-	<h2 class="subhead">First, let's look at the bigger picture:</h2>
 	<h2 class="big" style="font-size:2.6em;">Event-Based Programming</h2>
 </section>
 
@@ -26,7 +25,7 @@
 <section>
 	<h2 class="big">The Event Loop</h2>
 
-	<p>The <strong>event loop</strong> is literally an infinite loop running in the background, checking if any events have happened and running your at the right time.</p>
+	<p>The <strong>event loop</strong> is literally an infinite loop running in the background, checking if any events have happened and running your code at the right time.</p>
 	<img src="images/domino-loop.gif" class="noborder">
 	<p>There's one built into NodeJS and there's one built into your web browser!</p>
 	<p>See <a target="_blank" href="https://www.youtube.com/watch?v=8aGhZQkoFbQ">this great video</a> for details on the event loop in JavaScript.</p>
@@ -34,20 +33,20 @@
 
 <section>
 	<h2 style="margin-bottom:50px;">Event-based programming is <em>everywhere!</em></h2>
-	<p style="margin-bottom:40px;" class="fragment">Anywhere you deal with user input, you'll see event-based programming.</p>
-	<p class="fragment">It's big in NodeJS, SocketIO, and even in basic client-side JavaScript.</p>
+	<p style="margin-bottom:40px;" class="">Anywhere you deal with user input, you'll see event-based programming.</p>
+	<p class="">It's big in NodeJS, SocketIO, and even in basic client-side JavaScript.</p>
 </section>
 
 <section>
 	<h2 style="margin-bottom:50px;">There are <em>lots</em> of events built into JavaScript</h2>
-	<p style="margin-bottom:40px;" class="fragment">See the <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/Events">MDN event reference page</a> for a <em>gigantic</em> list!</p>
-	<p class="fragment" class="fragment">In fact, <strong>let's open that link right now</strong> and keep it handy for later!</p>
+	<p style="margin-bottom:40px;" class="">See the <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/Events">MDN event reference page</a> for a <em>gigantic</em> list!</p>
+
 </section>
 
 <section>
 	<h2 style="margin-bottom:50px;">You can also create your own events</h2>
-	<p style="margin-bottom:40px;" class="fragment">We'll be making our own custom SocketIO events today.</p>
-	<p class="fragment">You can also make custom events in plain JavaScript; see the <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/Guide/Events/Creating_and_triggering_events">MDN guide on creating events</a> for more info.</p>
+	<p style="margin-bottom:40px;" class="">We'll be making our own custom SocketIO events today.</p>
+	<p class="">You can also make custom events in plain JavaScript; see the <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/Guide/Events/Creating_and_triggering_events">MDN guide on creating events</a> for more info.</p>
 </section>
 
 <section>
