--- a/slides/75-how-our-app-works.html
+++ b/slides/75-how-our-app-works.html
@@ -1,6 +1,6 @@
 <!-- - - - - - - - - - - OVERVIEW OF OUR APP - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <section>
-	<h2 class="big">Now, back to our painting app!</h2>
+	<h2 class="big">Now for our painting app!</h2>
 </section>
 
 			<section>
