--- a/slides/92-part2-all.html
+++ b/slides/92-part2-all.html
@@ -1,9 +1,9 @@
 
 <!-- - - - - - - - - - - - - - - - - END of  CHALLENGE 4 - - - - - - - - - - - - - - -  - - - - - - - - - - - - - - - - - - - - -->
-<section>
+<!-- <section>
 	<h2 class="big">Time for a Quick Review</h2>
 </section>
-<!-- - - - - - - - - - - - - - - - MORE SOCKETIO FUNCTIONS  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
 <section>
 	<h2 class="big" style="margin-bottom:60px;">SocketIO Functions</h2>
 	<div class="halves">
@@ -22,19 +22,18 @@
 			<li class="fragment highlight-current-blue" data-fragment-index="1"><strong>socket.emit</strong> - Send event to server</li>
 		</ul>
 	</div>
-</section>
+</section> -->
 
 <!--
 - The client has only one way to send an event: to the server
 - The server has THREE different ways to send an event to one or more clients
 -->
 
-<!-- - - - - - - - - - - - - - - - END of MORE SOCKETIO FUNCTIONS - - - - - - - - -  - - - - - - - - - - - - - - - - - - - - -->
 <!-- - - - - - - - - - - - - - - - - - OVERVIEW CANVAS - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<section>
+<!-- <section>
 	<h2 class="subhead">Now let's get artistic!</h2>
 	<h2 class="big">Drawing with the Canvas API</h2>
-</section>
+</section> -->
 
 <section>
 	<h2>index.html</h2>
@@ -62,7 +61,7 @@
 
 <section>
 	<h2>local.js</h2>
-	<h3 class="subhead">Try out this code and see what happens:</h3>
+	<h3 class="subhead">Drawing a line on the canvas element:</h3>
 	<pre><code class="smaller js" data-trim contenteditable="">
 // Create a variable for the web page's canvas element, which has id="mycanvas":
 var canvas = document.getElementById('mycanvas');
@@ -78,7 +77,7 @@ pen.stroke();		// Draw the line
 </section>
 
 <section>
-	<h2 class="big" style="margin-bottom:50px;">Congrats, you drew a line!</h2>
+	<h2 style="margin-bottom:50px;">Behold, a work of art!</h2>
 	<iframe class="noborder noshadow" height='600' scrolling='no' src='//codepen.io/LearnToCodeLA/embed/VKApaP/?height=600&theme-id=dark&default-tab=js,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/LearnToCodeLA/pen/VKApaP/'>VKApaP</a> by Learn to Code LA (<a href='http://codepen.io/LearnToCodeLA'>@LearnToCodeLA</a>) on <a href='http://codepen.io'>CodePen</a>.
 	</iframe>
 </section>
@@ -98,62 +97,10 @@ pen.stroke();		// Draw the line
 
 <!-- - - - - - - - - - - - - - - - END of  OVERVIEW CANVAS - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <!-- - - - - - - - - - - - - - - - - - CHALLENGE 5  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<section>
-	<h2>Get ready for the next challenge...</h2>
-</section>
 
 <section>
 	<h2>local.js</h2>
-	<h3 class="subhead">Copy-paste this into your local.js file for the next challenge:</h3>
-	<pre><code class="smaller js" data-trim contenteditable="">
-// Start a WebSocket connection with the server using SocketIO
-var socket = io();
-
-// Create a variable for the web page's canvas element, which has id="mycanvas"
-var canvas = document.getElementById('mycanvas');
-
-// Create a variable to access the two-dimensional canvas drawing functions
-var pen = canvas.getContext('2d');
-
-// Set event listeners for when the mouse button is pressed down, when the mouse moves, and when the mouse button is released
-canvas.addEventListener('mousedown', startDrawing);
-canvas.addEventListener('mousemove', drawStuff);
-canvas.addEventListener('mouseup', stopDrawing);
-
-function startDrawing(event) {
-	console.log("START: " + event.clientX + ", " + event.clientY);
-
-	// Which canvas drawing functions should go here??
-	// HINT: start with pen.beginPath();
-
-}
-
-function drawStuff(event) {
-	console.log("Moved to: " + event.clientX + ", " + event.clientY);
-
-	// Which canvas drawing functions should go here?? (or none at all?)
-
-}
-
-function stopDrawing(event) {
-	console.log("STOP: " + event.clientX + ", " + event.clientY);
-
-	// Which canvas drawing functions should go here?? (or none at all?)
-
-}
-
-	</code></pre>
-</section>
-
-<section>
-	<h2 style="margin-bottom:40px;">Challenge 5: Put It (Almost) All Together!</h2>
-	<p style="margin-bottom:40px;">See if you can combine the code we have so far in <strong>local.js</strong> with the canvas functions to make it draw wherever you move your mouse!</p>
-	<p class="highlighted-blue"><strong>Hint:</strong> There are <em>four</em> drawing functions and <em>three</em> functions you could put them in (startDrawing, drawStuff, and stopDrawing)<br> ...so if in doubt, try every possible combination!</p>
-</section>
-
-<section>
-	<h2>local.js</h2>
-	<h3 class="subhead highlighted-red">One possible solution to challenge 5, part 1:</h3>
+	<h3 class="subhead">Client code, part 1:</h3>
 
 		<pre style="font-size:0.7em;padding-left:10px;">
 
@@ -162,24 +109,24 @@ var socket = io();
 var canvas = document.getElementById('mycanvas');
 var pen = canvas.getContext('2d');
 
-canvas.addEventListener('mousedown', startDrawing);
-canvas.addEventListener('mousemove', drawStuff);
-canvas.addEventListener('mouseup', stopDrawing);
+canvas.addEventListener('mousedown', <span class="fragment highlight-current-red" data-fragment-index="0">startDrawing</span>);
+canvas.addEventListener('mousemove', <span class="fragment highlight-current-red" data-fragment-index="1">drawStuff</span>);
+canvas.addEventListener('mouseup', <span class="fragment highlight-current-red" data-fragment-index="2">stopDrawing</span>);
 
-<span class="highlighted-red">var isDrawing = false;</span>
+<span class="fragment highlight-current-red" data-fragment-index="3">var isDrawing = false;</span>
 	</pre>
 </section>
 
 <section>
 	<h2>local.js</h2>
-	<h3 class="subhead">One possible solution to challenge 5, <span class="highlighted-red">part 2:</span></h3>
+	<h3 class="subhead">Client code, part 2:</h3>
 
 		<pre style="font-size:0.7em;padding-left:10px;">
 
 function startDrawing(event) {
 	console.log("START: " + event.clientX + ", " + event.clientY);
-	<span class="highlighted-red">isDrawing = true;
-	pen.beginPath();
+	<span class="fragment highlight-current-red" data-fragment-index="0">isDrawing = true;</span>
+	<span class="fragment highlight-current-red" data-fragment-index="1">pen.beginPath();
 	pen.moveTo(event.clientX, event.clientY );</span>
 
 }
@@ -188,24 +135,61 @@ function startDrawing(event) {
 
 <section>
 	<h2>local.js</h2>
-	<h3 class="subhead">One possible solution to challenge 5, <span class="highlighted-red">part 3:</span></h3>
+	<h3 class="subhead">Client code, part 3:</h3>
 
 		<pre style="font-size:0.7em;padding-left:10px;">
 
-function drawStuff(event) {
+<span class="fragment highlight-current-red" data-fragment-index="0">function drawStuff(event) {</span>
 	console.log("Moved to: " + event.clientX + ", " + event.clientY);
-	<span class="highlighted-red">if (isDrawing) {
-		pen.lineTo(event.clientX, event.clientY);
-		pen.stroke();
-	}</span>
+	<span class="fragment highlight-current-red" data-fragment-index="1">if (isDrawing) {</span>
+		<span class="fragment highlight-current-red" data-fragment-index="2">pen.lineTo(event.clientX, event.clientY);
+		pen.stroke();</span>
+	}
 }
 
-function stopDrawing(event) {
+<span class="fragment highlight-current-red" data-fragment-index="3">function stopDrawing(event) {</span>
 	console.log("STOP: " + event.clientX + ", " + event.clientY);
-	<span class="highlighted-red">isDrawing = false;</span>
+	<span class="fragment highlight-current-red" data-fragment-index="4">isDrawing = false;</span>
 }
 	</pre>
 </section>
+
+
+<section>
+	<h2 style="">How Our Painting App Works</h2>
+	<div class="halves" style="width:35%">
+	<ol class="small listspaces" style="margin-top:10px; padding-right:20px;">
+		<li class="">We all open a WebSocket connection with my web server.</li>
+		<li class="highlighted-blue">I click/move my mouse, and my web browser draws a line.</li>
+		<li class="">As I draw, my browser sends data to the server.</li>
+		<li class="">The server sends the data to everyone except me.</li>
+		<li class="">Your browsers draw lines based on the data.</li>
+		<li class="">Rinse and repeat, with all of us drawing together!</li>
+	</ol>
+</div>
+	<img class="halves noshadow noborder nomargin" style="width:65%" src="images/painting-app-steps.gif">
+</section>
+
+<section>
+	<h2 class="big" style="margin-bottom:60px;">SocketIO Functions Review</h2>
+	<div class="halves">
+		<h3 style="font-size:1.7em;">Server:</h3>
+		<ul class="listspaces">
+			<li class="fragment highlight-current-blue" data-fragment-index="0"><strong>socket.on</strong> - Listen for events</li>
+			<li class="fragment highlight-current-blue" data-fragment-index="1"><strong>socket.emit</strong> - Send event to <em>one particular</em> client</li>
+			<li class="fragment highlight-current-blue" data-fragment-index="2"><strong>socket.broadcast.emit</strong> - Send event to every client <em>except for one particular client</em></li>
+			<li class="fragment highlight-current-blue" data-fragment-index="3"><strong>io.sockets.emit</strong> - Send event to every connected client</li>
+		</ul>
+	</div>
+	<div class="halves">
+		<h3 style="font-size:1.7em;">Client:</h3>
+		<ul class="listspaces">
+			<li class="fragment highlight-current-blue" data-fragment-index="0"><strong>socket.on</strong> - Listen for events</li>
+			<li class="fragment highlight-current-blue" data-fragment-index="1"><strong>socket.emit</strong> - Send event to server</li>
+		</ul>
+	</div>
+</section>
+
 <!-- - - - - - - - - - - - - - - - - END of  CHALLENGE 5 - - - - - - - - - - - - - - -  - - - - - - - - - - - - - - - - - - - - -->
 <!-- - - - - - - - - - - - - - - - - - EMIT,  AFTER CHALLENGE 5  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <section>
@@ -243,11 +227,28 @@ function drawStuff(event) {
 	if (isDrawing) {
 		pen.lineTo(event.clientX, event.clientY);
 		pen.stroke();
-		<span class="highlighted-red">socket.emit('mousedown', {x: event.clientX, y: event.clientY});</span>
+		<span class="highlighted-red">socket.emit('mousemove', {x: event.clientX, y: event.clientY});</span>
 	}
 }
 	</pre>
 </section>
+
+<section>
+	<h2 style="">How Our Painting App Works</h2>
+	<div class="halves" style="width:35%">
+	<ol class="small listspaces" style="margin-top:10px; padding-right:20px;">
+		<li class="">We all open a WebSocket connection with my web server.</li>
+		<li class="">I click/move my mouse, and my web browser draws a line.</li>
+		<li class="highlighted-blue">As I draw, my browser sends data to the server.</li>
+		<li class="">The server sends the data to everyone except me.</li>
+		<li class="">Your browsers draw lines based on the data.</li>
+		<li class="">Rinse and repeat, with all of us drawing together!</li>
+	</ol>
+</div>
+	<img class="halves noshadow noborder nomargin" style="width:65%" src="images/painting-app-steps.gif">
+</section>
+
+
 <!-- - - - - - - - - - - - - - - - - END of EMIT, AFTER CHALLENGE 5 - - - - - - - - - - - - - - -  - - - - - - - - - - - - - - - - - - - - -->
 <!-- - - - - - - - - - - - - - - - - - SERVER RECEIVING CODE  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <section>
@@ -266,7 +267,7 @@ function drawStuff(event) {
 
 		<pre style="font-size:0.67em;padding-left:10px;">
 
-// all other app.js boilerplate code is still above here
+// This goes below boilerplate code for setting up SockEtio, Express, etc
 
 io.on('connection', function(socket) {
 
@@ -301,7 +302,7 @@ io.on('connection', function(socket) {
 
 		<pre style="font-size:0.67em;padding-left:10px;">
 
-// Add this to the bottom of your local.js file:
+// This goes below all the previous local.js code:
 
 socket.on(<span class="fragment highlight-current-red" data-fragment-index="0">'mousedown'</span>, function(<span class="fragment highlight-current-red" data-fragment-index="1">data</span>) {
 	pen.beginPath();
@@ -315,26 +316,19 @@ socket.on(<span class="fragment highlight-current-red" data-fragment-index="0">'
 	</pre>
 </section>
 
-
-
-<!--
-NEXT SECTIONS:
-
-- test it live, see the bug, discuss for a minute how to fix it
-
-- interpolation as the solution to this bug and also making our app less laggy!
-	- show: dot moving over time, saving last dot and current dot
-	- GIVE the code in steps / walk through it in steps
-	- animated GIF of what's happening??? compare broken vs new code??
-
-- LAST: everyone star the github repo, add an issue on the github for ideas for next features!
-
--->
-
-
-<!-- - - - - - - - - - - - - - - - - END of DRAW FROM BROADCST - - - - - - - - - - - - - - -  - - - - - - - - - - - - - - - - - - - - -->
+<section>
+	<h2 class="big">And that's it! Except for one small detail...</h2>
+</section>
 
 <section>
-	<h2 style="margin-bottom:50px;"><a href="https://github.com/LearnToCodeLA/socketio-paint-demo">Click here to view the final code!</a></h2>
+	<h2 class="subhead">Click and drag to draw on this collaborative canvas:</h2>
+	<iframe style="margin-top: 10px; height: 500px;" src="/paint-demo-broken/index.html"></iframe>
 </section>
-<!-- - - - - - - - - - - - - - - - - END of FIX THAT BUG - - - - - - - - - - - - - - -  - - - - - - - - - - - - - - - - - - - - -->
+
+<section>
+	<h2><a href="https://github.com/LearnToCodeLA/socketio-paint-demo" target="_blank">Click here to view the final (fixed!) code</a></h2>
+</section>
+
+<section>
+	<h2>Thank you, and happy coding!</h2>
+</section>
